  - Use Java NIO instead of File, courtesy of Articdive with PR #5316.
0.97.2.6:
  - Fix global messages that lost their Towny prefix.
  - Bump language file to 0.127.
  - Add nation zone size to nation and town status screens.
  - Add hover to the capital on the nation status screen.
  - Clean up TownyMessaging class.
  - Use server provided gson instead of shading our own, courtesy of Warriorrrr with PR #5347.
  - Tidy & rename /ta delete, courtesy of Warriorrrr with PR #5351.
  - Removed command: /ta delete {residentname}
  - New Command: /ta resident {residentname} delete. 
  - Enhance the /res list command, courtesy of Warriorrrr with PR #5350.
  - Fix updating reference lang files, an issue on select operating systems.
  - Blank capital prefixes and postfixes will no longer override a town's normal prefix and postfix.
  - Blank king prefixes and postfixes will no longer override a mayor's normal prefix and postfix.
  - Fix no feedback message when a town tries to purchase more bonus blocks, when they are already at max.
    - Closes #5354.
  - Limit the amount of changelog lines printed to 100, courtesy of Warriorrrr with PR #5352.
  - Fix TownAddResidentEvent firing on database loads.
    - Closes #5356.
0.97.2.7:
  - Fix appearance of the overclaimed upkeep line in the town status screen.
  - Add option to prevent a nation's capital city from being neutral.
    - Closes #5360.
  - New Config Option: global_nation_settings.capitals_cannot_be_neutral
    - Default: false
    - If true the capital city of nation cannot be neutral/peaceful.
  - Bump language file to 0.128.
  - Fix the /ta plot claimedat command, courtesy of Warriorrrr with PR #5361.
  - Expand MetaDataUtil methods to include hasMeta and addNewMeta methods.
  - Make the plot change listener more efficient, courtesy of Warriorrrr with PR #5365.
0.97.2.8:
  - Make it so that turning Towny off in a world will shut down any active revert-on-unclaim actions. 