@@ -1072,7 +1072,7 @@ msg_err_teleport_cancelled_damage: 'Damage has cancelled your teleport.'
 # Added in 0.82
 invitation_prefix: "&8[&7Invitation&8] &9"
 confirmation_prefix: "&8[&7Confirmation&8] &9"
-this_message_will_expire2: '&9This will auto-expire in 20 seconds'
+this_message_will_expire2: '&9This will auto-expire in %s seconds'
 msg_hover_next_page: 'Next Page'
 msg_hover_previous_page: 'Previous Page'
 
