@@ -46,9 +46,11 @@ public class ConfirmationHandler {
 		// Run the cancel handler.
 		if (confirmation.getCancelHandler() != null) {
 			confirmation.getCancelHandler().run();
+			
+		} else {
+			TownyMessaging.sendMsg(sender, Translatable.of("successful_cancel"));
+
 		}
-		
-		TownyMessaging.sendMsg(sender, Translatable.of("successful_cancel"));
 	}
 
 	/**
@@ -67,7 +69,7 @@ public class ConfirmationHandler {
 		
 		// Send the confirmation message.
 		String title = confirmation.getTitle(Translation.getLocale(sender));
-		TownyMessaging.sendConfirmationMessage(sender, title, null, null, null);
+		TownyMessaging.sendConfirmationMessage(sender, title, null, null, Translatable.of("this_message_will_expire2", confirmation.getDuration()).forLocale(sender));
 		
 		int duration = confirmation.getDuration();
 		
